// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`front-matter.md 1`] = `
====================================options=====================================
insertPragma: true
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---
something
---

# hello world

some content some content some content some content

=====================================output=====================================
---
something
---

<!-- @format -->

# hello world

some content some content some content some content

================================================================================
`;

exports[`simple.md 1`] = `
====================================options=====================================
insertPragma: true
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
# hello world

some content some content some content some content

=====================================output=====================================
<!-- @format -->

# hello world

some content some content some content some content

================================================================================
`;

exports[`start-with-comment.md 1`] = `
====================================options=====================================
insertPragma: true
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<!-- something -->

# hello world

some content some content some content some content

=====================================output=====================================
<!-- @format -->

<!-- something -->

# hello world

some content some content some content some content

================================================================================
`;
